feat(forum): :sparkles: Profile user Added in foro

--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -1,6 +1,6 @@
 .foro_home_container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: calc(
     100vh - $navbar-height - $navbar-height-maring-top -
       $navbar-height-maring-button
