--- a/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
+++ b/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
@@ -10,6 +10,7 @@
     padding: 10px 25px;
     justify-content: space-between;
     height: 400px;
+    margin-right: 40px;
     
 
     .foro_panel_SearchContainer {
