--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -22,6 +22,8 @@
 @import './components/Foro/foro_comments/foro_comments';
 @import './components/ModalFavorites/modalFavorites';
 @import './components/Foro/foro_panelfilter/foro_panelFilter';
+@import './components//Foro//foro_menu/foro_menu';
+@import './components/Foro/foro_profile/foro_profile';
 
 // Shop
 @import './components/Shop/shop';
