--- a/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
+++ b/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
@@ -3,56 +3,69 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  
 
   .dashboardAdmin_wrapper {
-    border: 1px solid burlywood;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     gap: 40px;
+    width: 96%;
+    padding: 30px;
+    // margin-top: 15px;
+    margin-bottom: 30px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    box-shadow: 3px 2px 1px lightgray;
 
-    padding: 12px;
 
     .dashboardAdmin_card {
-      border: 1px solid red;
+      // border: 1px solid red;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      gap: 5px;
+      gap: 10px;
 
       height: 140px;
       width: 250px;
       border-radius: 10px;
-      box-shadow: 2px 2px 1px #888888;
+      box-shadow: 3px 2px 1px rgb(175, 175, 175);
+      
       
 
       .dashboardAdmin_icon {
-        border: 1px solid blue;
+        height: 70px;
+        width: 70px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        // border: 1px solid blue;
       }
 
       h2 {
-        border: 1px solid green;
+        // border: 1px solid green;
+        font-size: 24px;
+        // margin-top: 20px;
+        color: gray;
       }
 
       p {
-        border: 1px solid orange;
+        // border: 1px solid orange;
         font-size: 24px;
+        font-weight: bold;
+        color: #3f51b5;
       }
     }
   }
 
-  .PieChart {
-    border: 1px solid darkred;
-    // height: 350px;
-    // width: 0px;
-    
-  }
-  .ComposedChart {
-    border: 1px solid darkred;
-  }
+  .PieChart,
+  .ComposedChart,
   .AreaChart {
-    border: 1px solid darkred;
+  border: 1px solid darkred;
+    
   }
 }
