fix(forum): :bug: Fixing bugs and modification added

--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -139,11 +139,23 @@
       }
     }
     
-    
+    overflow-x: hidden;
 
     &::-webkit-scrollbar {
-      width: 1px;
-    }
+      width: 5px;
+      background-color: $standard-background;
+  }
+
+  &::-webkit-scrollbar-thumb {
+      background-color: $standard-color-blue;
+      border-radius: 5px;
+  }
+
+  &::-webkit-scrollbar-button {
+      //background-color: red;
+      width: 2px;
+      height: 100%;
+  }
   }
 
 }
