--- a/client/src/styles/components/Foro/foro_profile/_foro_profile.scss
+++ b/client/src/styles/components/Foro/foro_profile/_foro_profile.scss
@@ -9,11 +9,11 @@
         width: 100%;
         display: flex;
         //flex-direction: column-reverse;
-        justify-content: space-around;
+        justify-content: center;
 
         .Foro_Profile_PostSide {
             padding: 20px;
-            width: 700px;
+            width: 800px;
             overflow: auto;
             //background-color: red;
             display: flex;
@@ -21,6 +21,7 @@
             align-items: center;
             font-family: $standard-font-Outfit-sans-serif;
             overflow-x: hidden;
+            //background-color: green;
 
             &::-webkit-scrollbar {
                 width: 5px;
@@ -37,113 +38,113 @@
                 width: 2px;
                 height: 100%;
             }
-        }
 
-        .foro_Profile_ProfileSide {
-            display: flex;
-            justify-content: center;    
-            
-            .Foro_Profile_Container {
-                width: 500px;
-                height: 350px;
-                background-color: white;
-                margin-top: 20px;
-                border-radius: 5px;
-
-                .Foro_Profile_Banner_PicturesSide {
+              
+                
+                .Foro_Profile_Container {
                     width: 100%;
-                    height: 200px;
-                    position: relative;
-                    img {
+                    height: 350px;
+                    background-color: white;
+                    //margin-top: 20px;
+                    border-radius: 5px;
+    
+                    .Foro_Profile_Banner_PicturesSide {
                         width: 100%;
-                        height: 100%;
-                        border-top-left-radius: 5px;
-                        border-top-right-radius: 5px;
+                        height: 200px;
+                        position: relative;
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            border-top-left-radius: 5px;
+                            border-top-right-radius: 5px;
+                        }
+                        .profilePic {
+                            border-radius: 100%;
+                            width: 150px;
+                            height: 150px;
+                            position: absolute;
+                            top: 60%;
+                            left: 20px;
+                            cursor: pointer;
+                            background-color: $standard-color-blue;
+                        }
+                        .profilePicDefault {
+                            border-radius: 100%;
+                            width: 150px;
+                            height: 150px;
+                            padding: 30px;
+                            position: absolute;
+                            top: 60%;
+                            left: 20px;
+                            cursor: pointer;
+                            background-color: $standard-color-blue;
+                        }
                     }
-                    .profilePic {
-                        border-radius: 100%;
-                        width: 150px;
-                        height: 150px;
-                        position: absolute;
-                        top: 60%;
-                        left: 20px;
-                        cursor: pointer;
-                        background-color: $standard-color-blue;
-                    }
-                    .profilePicDefault {
-                        border-radius: 100%;
-                        width: 150px;
-                        height: 150px;
-                        padding: 30px;
-                        position: absolute;
-                        top: 60%;
-                        left: 20px;
-                        cursor: pointer;
-                        background-color: $standard-color-blue;
-                    }
-                }
-
-                .Foro_Profile_NameSide {
-                    width: 100%;
-                    display: flex;
-                    display: flex;
-                    flex-direction: column;
-                    overflow: hidden;
-                    //background-color: red;
-                    
-                    .Foro_Profile_NameDefault {
-                        margin-left: 200px;
-                        font-family: $standard-font-Outfit-sans-serif;
-                        color: rgb(37, 36, 36);
-                        font-size: 25px;
-                        padding: 15px 5px;
-                        overflow: hidden;
-                    }
-                    h1 {
-                        margin-left: 200px;
-                        font-family: $standard-font-Outfit-sans-serif;
-                        color: rgb(37, 36, 36);
-                        font-size: 25px;
-                        white-space: nowrap;
-                        //background-color: green;
-                        max-width: 80%;
-                        overflow: hidden;
-                    }
-                    p {
-                        padding-left: 200px;
-                        font-family: $standard-font-Outfit-sans-serif;
-                        color: rgb(37, 36, 36);
-                        //background-color: $standard-color-blue;
-                    }
-                }
-
-                .Foro_Profile_ContentSide {
-                    display: flex;
-                    //border: 1px solid red;
-                    margin: 20px;
-                    justify-content: space-around;
-
-                    .Foro_Profile_StatContainer {
+    
+                    .Foro_Profile_NameSide {
+                        width: 100%;
+                        display: flex;
                         display: flex;
                         flex-direction: column;
-                        align-items: center;
-                        cursor: pointer;
-
-                        img {
-                            width: 36px;
-                        }
-
-                        p {
+                        overflow: hidden;
+                        //background-color: red;
+                        
+                        .Foro_Profile_NameDefault {
+                            margin-left: 200px;
                             font-family: $standard-font-Outfit-sans-serif;
                             color: rgb(37, 36, 36);
+                            font-size: 25px;
+                            padding: 15px 5px;
+                            overflow: hidden;
                         }
-                        &:hover img {
-                            transform: scale(1.2);
+                        h1 {
+                            margin-left: 200px;
+                            font-family: $standard-font-Outfit-sans-serif;
+                            color: rgb(37, 36, 36);
+                            font-size: 25px;
+                            white-space: nowrap;
+                            //background-color: green;
+                            max-width: 80%;
+                            overflow: hidden;
+                        }
+                        p {
+                            padding-left: 200px;
+                            font-family: $standard-font-Outfit-sans-serif;
+                            color: rgb(37, 36, 36);
+                            //background-color: $standard-color-blue;
+                        }
+                    }
+    
+                    .Foro_Profile_ContentSide {
+                        display: flex;
+                        //border: 1px solid red;
+                        margin: 20px;
+                        justify-content: space-around;
+    
+                        .Foro_Profile_StatContainer {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            cursor: pointer;
+    
+                            img {
+                                width: 36px;
+                            }
+    
+                            p {
+                                font-family: $standard-font-Outfit-sans-serif;
+                                color: rgb(37, 36, 36);
+                            }
+                            &:hover img {
+                                transform: scale(1.2);
+                            }
                         }
                     }
                 }
-            }
+            
         }
+
+        
     }
 }
 
