style(admin dashboard): :art: add icons to wrapper of dashboard admin

--- a/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
+++ b/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
@@ -34,6 +34,15 @@
       width: 250px;
       border-radius: 10px;
       box-shadow: 3px 2px 1px rgb(175, 175, 175);
+
+      img{
+        height: 45px;
+        width: 45px;
+        margin-top: 3px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
       
       
 
