apply dark mode home, shopping cart and form checkout

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -9,7 +9,7 @@ $main: #7000b1;
 $secondary: #01bebe;
 $white: #f5f5f5;
 $dark: #001e24;
-$standard-background: #DAE0E6;
+$standard-background: #dae0e6;
 
 //TODO fonts
 
@@ -85,7 +85,7 @@ $standard-basic-heith-home: 1080px;
 // $standard-space-between-elements: 19px;
 $navbar-height: 70px;
 $footer-height: 70px;
-$navbar-height-maring-top: 5px;
-$navbar-height-maring-button: 5px;
+$navbar-height-maring-top: 20px;
+$navbar-height-maring-button: 20px;
 $filterPanel-width: 300px;
 $filterFilt-height: 400px;
