--- a/client/src/styles/components/Checkout/_form.scss
+++ b/client/src/styles/components/Checkout/_form.scss
@@ -20,8 +20,16 @@
       padding: 30px;
       gap: 10px;
 
+      body.dark & {
+        background: $standard-color-black-ligth;
+        box-shadow: 12px 12px 24px #151515, -12px -12px 24px #232323;
+      }
+
       h1 {
         color: rgba(20, 33, 66, 1);
+        body.dark & {
+          color: $standard-color-white;
+        }
       }
       .input {
         border: 2.2px solid #eee;
