fix(forum): :bug: show message when user has not post

--- a/client/src/styles/components/Foro/foro_profile/_foro_profile.scss
+++ b/client/src/styles/components/Foro/foro_profile/_foro_profile.scss
@@ -195,3 +195,12 @@
 }
 
 
+
+
+.foro_profile_NotPost {
+    margin-top: 30px;
+    border-radius: 20px;
+    background-color: $standard-color-blue;
+    color: white;
+    padding: 2px 15px;
+}
