--- a/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
+++ b/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   margin-top: 30px;
   margin-bottom: 30px;
-  
 
   .dashboardAdmin_wrapper {
     display: flex;
@@ -59,50 +58,41 @@
         // border: 1px solid green;
         font-size: 24px;
         // margin-top: 20px;
-        color: gray;
+        color: rgb(0, 0, 0);
       }
 
       p {
         // border: 1px solid orange;
         font-size: 24px;
         font-weight: bold;
-        color: #3f51b5;
+        color: #00c91b;
       }
     }
   }
   .main_graphics{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    // grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+    grid-template-rows: 1fr 1fr;
     width: 96%;
+    
+    .PieChart, .ComposedChart, .AreaChart{
+      padding: 9px;
+      border: 1px solid lightgray;
+      border-radius: 10px;
+      box-shadow: 3px 2px 1px lightgray;
+      margin-top: 9px;
+      margin-bottom: 9px;
+    }
 
-    .PieChart{
-      grid-column: 3 / 3;
-      grid-row: 1;
-      padding: 9px;
-      border: 1px solid lightgray;
-      border-radius: 10px;
-      box-shadow: 3px 2px 1px lightgray;
+    .primerDiv{
+      display:grid;
+      grid-template-columns: 1fr 3fr;
+      grid-gap: 15px;
     }
-    .ComposedChart{
-      grid-column: 1 / 3;
-      grid-row: 1 / 3;
-      margin-bottom: 600px;
-      padding: 9px;
-      border: 1px solid lightgray;
-      border-radius: 10px;
-      box-shadow: 3px 2px 1px lightgray;
-    }
-    .AreaChart {
-      grid-column: 1/4;
-      grid-row: 2;
-      margin-top: 30px;
-      margin-bottom: 30px;
-      padding: 9px;
-      border: 1px solid lightgray;
-      border-radius: 10px;
-      box-shadow: 3px 2px 1px lightgray;
+
+    .segundoDiv{
+      grid-template-rows: 1fr;
     }
   }
   
