style(forum): :lipstick: Using the same navbar color in filter panel

--- a/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
+++ b/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
@@ -97,7 +97,7 @@
             //flex-direction: column;
             //justify-content: center;
             align-items: center;
-            color: cornflowerblue;
+            color: $standard-color-blue-green;
             border-radius: 5px;
             background-color:rgb(17, 22, 54);
             transition: all .1s ease-in;
