--- a/client/src/styles/components/Foro/foro_menu/_foro_menu.scss
+++ b/client/src/styles/components/Foro/foro_menu/_foro_menu.scss
@@ -7,6 +7,18 @@
     flex-direction: column;
     padding: 5px;
     color: white;
+    @media (max-width:900px) {
+        height: 100vh;
+        width:50px;
+    }
+    @media (max-width:500px){
+        flex-direction: row;
+        height: auto;
+        width: 100vh;
+        
+       
+    }
+    
     //border-top: 1px solid $standard-background;
 
     .Menu_ButtonContainer {
@@ -19,6 +31,10 @@
         padding: 10px 0px;
         margin-bottom: 12px;
 
+        @media (max-width:500px){
+           justify-content: center;
+           padding: 0px;
+        }
         &:hover {
             background-color:rgb(17, 22, 54);
         }
