--- a/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
+++ b/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
@@ -11,7 +11,16 @@
     justify-content: space-between;
     height: 400px;
     margin-right: 40px;
+    // background-color: blue; 
+    @media (max-width: 900px) {
+        width: 98%;
+        margin-right: 0px;
+        margin-top: 10px;
+        height: auto;
+     
+    }
     
+   
 
     .foro_panel_SearchContainer {
         display: flex;
@@ -53,8 +62,13 @@
         color: white;
         cursor: pointer;
 
+
         img{
             width: 30px;
+            height: 30px;
+            position: relative;
+            bottom: 4px;
+            margin-left: 8px;
             
         }
     }
@@ -65,6 +79,13 @@
         flex-direction: column;
         margin-top: 10px;
         justify-content: space-around;
+      
+        @media (max-width: 900px) {
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            height: 50px;
+        }
 
         .foro_panel_Menu_HomeContainer {
             cursor: pointer;
@@ -73,6 +94,17 @@
             //justify-content: center;
             align-items: center;
             border-radius: 5px;
+            // background-color: blueviolet;
+            @media (max-width: 610px){
+                justify-content: center;
+                margin-right:0px;
+                margin-left: 0px;
+            }
+            p {
+                @media (max-width: 610px){
+                    display: none;
+                }
+            }
             
             transition: all .1s ease-in;
             overflow: hidden;
@@ -81,6 +113,11 @@
                 width: 20px;
                 margin: 5px;
                 margin-right: 20px;
+                @media (max-width: 610px){
+                    justify-content: center;
+                    margin-right:0px;
+                    margin-left: 0px;
+                }
             }
 
             &:hover {
@@ -97,16 +134,21 @@
             //flex-direction: column;
             //justify-content: center;
             align-items: center;
-            color: $standard-color-blue-green;
+            // color: $standard-color-blue-green;
             border-radius: 5px;
             background-color:rgb(17, 22, 54);
             transition: all .1s ease-in;
             overflow: hidden;
+            @media (max-width: 610px){
+                justify-content: center;
+                padding-right: 5px;
+           
+            }
             
             img {
                 width: 20px;
                 margin: 5px;
-                margin-right: 20px;
+                // margin-right: 20px;
             }
 
         }
@@ -121,3 +163,11 @@
         }
     }
 }
+
+.foro_panel_search_div{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    // flex-direction: column;
+}
+
